Update execution counts and Python version in notebook

--- a/aml-rf3-modelforge.ipynb
+++ b/aml-rf3-modelforge.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "562ffbd4",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "id": "36ffcbad",
    "metadata": {},
    "outputs": [
@@ -60,6 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Current wd is: /mnt/batch/tasks/shared/LS_root/mounts/clusters/pabhatia-gpu/code/Users/dockerrf3/rf3/aml_env_async/rf3-object\n",
       "JSON file path: ./RosettaFold3/failure.json\n",
       "Output directory: extracted_files\n"
      ]
@@ -70,6 +71,7 @@
     "JSON_FILE_PATH = \"./RosettaFold3/failure.json\"  # Update this path to your JSON file\n",
     "OUTPUT_DIRECTORY = \"extracted_files\"  # Output directory for extracted files\n",
     "\n",
+    "print(f\"Current wd is: {os.getcwd()}\")\n",
     "print(f\"JSON file path: {JSON_FILE_PATH}\")\n",
     "print(f\"Output directory: {OUTPUT_DIRECTORY}\")"
    ]
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "id": "0fbfc1dc",
    "metadata": {},
    "outputs": [
@@ -94,12 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully loaded JSON file: ./RosettaFold3/failure.json\n",
-      "Warning: 'outputs' section not found in JSON\n",
-      "\n",
-      "JSON structure:\n",
-      "Request ID: 62c0b817-0adf-4395-9ed4-102d359af4fe\n",
-      "Status: error\n"
+      "Error: File ./RosettaFold3/failure.json not found\n"
      ]
     }
    ],
@@ -474,9 +471,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "trace",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "trace"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -488,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
