Update execution counts and file paths in notebook

--- a/aml-rf3-modelforge.ipynb
+++ b/aml-rf3-modelforge.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "562ffbd4",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "id": "36ffcbad",
    "metadata": {},
    "outputs": [
@@ -60,16 +60,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "JSON file path: ./RosettaFold3/failure.json\n",
+      "Current wd is: /mnt/batch/tasks/shared/LS_root/mounts/clusters/pabhatia-gpu/code/Users/dockerrf3/rf3/aml_env_async/rf3-object\n",
+      "JSON file path: ./failure.json\n",
       "Output directory: extracted_files\n"
      ]
     }
    ],
    "source": [
     "# Configuration parameters\n",
-    "JSON_FILE_PATH = \"./RosettaFold3/failure.json\"  # Update this path to your JSON file\n",
+    "JSON_FILE_PATH = \"./failure.json\"  # Update this path to your JSON file\n",
     "OUTPUT_DIRECTORY = \"extracted_files\"  # Output directory for extracted files\n",
     "\n",
+    "print(f\"Current wd is: {os.getcwd()}\")\n",
     "print(f\"JSON file path: {JSON_FILE_PATH}\")\n",
     "print(f\"Output directory: {OUTPUT_DIRECTORY}\")"
    ]
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
    "id": "0fbfc1dc",
    "metadata": {},
    "outputs": [
@@ -94,16 +96,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully loaded JSON file: ./RosettaFold3/failure.json\n",
-      "Warning: 'outputs' section not found in JSON\n",
+      "Successfully loaded JSON file: ./failure.json\n",
+      "The request failed for some reason!\n",
+      "============================\n",
+      "filepath\n",
+      "./failed-request-data\n",
+      "✓ Saved file: failed-request-data (51155046 bytes)\n",
+      "============================\n",
+      "Found 'outputs' section with 0 items\n",
       "\n",
       "JSON structure:\n",
-      "Request ID: 62c0b817-0adf-4395-9ed4-102d359af4fe\n",
-      "Status: error\n"
+      "Request ID: req_4e6986fd2dd44b1bbedd072d7eebdce3\n",
+      "Status: failed\n",
+      "Output files found: []\n"
      ]
     }
    ],
    "source": [
+    "def decode_and_save_error_file(filename, base64_data, output_path):\n",
+    "    \"\"\"\n",
+    "    Decode base64 data and save as a generic file.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Decode base64 data\n",
+    "        decoded_data = base64.b64decode(base64_data)\n",
+    "        \n",
+    "        # Create full file path\n",
+    "        file_path = output_path + filename\n",
+    "        print('filepath')\n",
+    "        print(file_path)\n",
+    "        # Write the decoded data\n",
+    "        with open(file_path, 'wb') as f:\n",
+    "            f.write(decoded_data)\n",
+    "        \n",
+    "        print(f\"✓ Saved file: {filename} ({len(decoded_data)} bytes)\")\n",
+    "        return True\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"✗ Error saving {filename}: {e}\")\n",
+    "        return False\n",
+    "        \n",
     "def load_json_data(json_file_path):\n",
     "    \"\"\"\n",
     "    Load JSON data from file and return the parsed content.\n",
@@ -120,7 +152,7 @@
     "                print(\"============================\")\n",
     "                stderr = data[\"stderr\"]\n",
     "                x = len(stderr)/2\n",
-    "                print(\"Error (truncated):\",stderr[0:x],stderr[-x:])\n",
+    "                decode_and_save_error_file('failed-request-data',stderr,\"./\")\n",
     "                print(\"============================\")\n",
     "        # Check if the JSON has the expected structure\n",
     "        if 'outputs' in data:\n",
@@ -161,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "id": "ff0937ba",
    "metadata": {},
    "outputs": [
@@ -169,7 +201,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output directory ready: /home/mekshirs/azurefiles/UW_IPD/extracted_files\n"
+      "Output directory ready: /mnt/batch/tasks/shared/LS_root/mounts/clusters/pabhatia-gpu/code/Users/dockerrf3/rf3/aml_env_async/rf3-object/extracted_files\n"
      ]
     }
    ],
@@ -199,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "id": "d96f300d",
    "metadata": {},
    "outputs": [],
@@ -283,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
    "id": "ed646eb0",
    "metadata": {},
    "outputs": [
@@ -291,7 +323,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No outputs found in JSON data\n"
+      "\n",
+      "Processing 0 files...\n",
+      "--------------------------------------------------\n",
+      "--------------------------------------------------\n",
+      "Extraction Summary:\n",
+      "  .gz files saved: 0\n",
+      "  .csv files saved: 0\n",
+      "  Other files saved: 0\n",
+      "  Total successful: 0/0\n"
      ]
     }
    ],
@@ -362,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "id": "3289bc5b",
    "metadata": {},
    "outputs": [
@@ -370,38 +410,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Files in output directory (extracted_files):\n",
-      "------------------------------------------------------------\n",
-      "\n",
-      " Compressed (.gz) files:\n",
-      "  meghana-msa_model_0.cif.gz                   61,142 bytes\n",
-      "  meghana-msa_model_1.cif.gz                   61,298 bytes\n",
-      "  meghana-msa_model_2.cif.gz                   61,017 bytes\n",
-      "  meghana-msa_model_3.cif.gz                   61,181 bytes\n",
-      "  meghana-msa_model_4.cif.gz                   60,656 bytes\n",
-      "  pb-msa_model_0.cif.gz                        60,745 bytes\n",
-      "  pb-msa_model_1.cif.gz                        61,087 bytes\n",
-      "  pb-msa_model_2.cif.gz                        60,931 bytes\n",
-      "  pb-msa_model_3.cif.gz                        60,828 bytes\n",
-      "  pb-msa_model_4.cif.gz                        61,190 bytes\n",
-      "  pb-without-msa_model_0.cif.gz                61,148 bytes\n",
-      "  pb-without-msa_model_1.cif.gz                61,303 bytes\n",
-      "  pb-without-msa_model_2.cif.gz                61,022 bytes\n",
-      "  pb-without-msa_model_3.cif.gz                61,185 bytes\n",
-      "  pb-without-msa_model_4.cif.gz                60,660 bytes\n",
-      "\n",
-      " CSV files:\n",
-      "  meghana-msa_metrics.csv                         915 bytes\n",
-      "  pb-msa_metrics.csv                              904 bytes\n",
-      "  pb-without-msa_metrics.csv                      918 bytes\n",
-      "\n",
-      " Other files:\n",
-      "  meghana-msa.score                             2,361 bytes\n",
-      "  pb-msa.score                                  2,299 bytes\n",
-      "  pb-without-msa.score                          2,406 bytes\n",
-      "\n",
-      "Total files extracted: 21\n"
+      "No files found in extracted_files\n"
      ]
     }
    ],
@@ -474,9 +483,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "trace",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "trace"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -488,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
